crates/nuff_python_parser/src/snapshots/nuff_python_parser__string__tests__escape_alias.snap
---
source: crates/nuff_python_parser/src/string.rs
expression: suite
---
[
    Expr(
        StmtExpr {
            node_index: NodeIndex(None),
            range: 0..12,
            value: StringLiteral(
                ExprStringLiteral {
                    node_index: NodeIndex(None),
                    range: 0..12,
                    value: StringLiteralValue {
                        inner: Single(
                            StringLiteral {
                                range: 0..12,
                                node_index: NodeIndex(None),
                                value: "\u{1b}",
                                flags: StringLiteralFlags {
                                    quote_style: Double,
                                    prefix: Empty,
                                    triple_quoted: false,
                                    unclosed: false,
                                },
                            },
                        ),
                    },
                },
            ),
        },
    ),
]
