crates/nuff_python_parser/src/snapshots/nuff_python_parser__string__tests__escape_char_in_byte_literal.snap
---
source: crates/nuff_python_parser/src/string.rs
expression: suite
---
[
    Expr(
        StmtExpr {
            node_index: NodeIndex(None),
            range: 0..13,
            value: BytesLiteral(
                ExprBytesLiteral {
                    node_index: NodeIndex(None),
                    range: 0..13,
                    value: BytesLiteralValue {
                        inner: Single(
                            BytesLiteral {
                                range: 0..13,
                                node_index: NodeIndex(None),
                                value: [
                                    111,
                                    109,
                                    107,
                                    109,
                                    111,
                                    107,
                                    92,
                                    88,
                                    97,
                                    97,
                                ],
                                flags: BytesLiteralFlags {
                                    quote_style: Double,
                                    prefix: Regular,
                                    triple_quoted: false,
                                    unclosed: false,
                                },
                            },
                        ),
                    },
                },
            ),
        },
    ),
]
