crates/nuff_python_parser/src/snapshots/nuff_python_parser__string__tests__fstring_constant_range.snap
---
source: crates/nuff_python_parser/src/string.rs
expression: suite
---
[
    Expr(
        StmtExpr {
            node_index: NodeIndex(None),
            range: 0..22,
            value: FString(
                ExprFString {
                    node_index: NodeIndex(None),
                    range: 0..22,
                    value: FStringValue {
                        inner: Single(
                            FString {
                                range: 0..22,
                                node_index: NodeIndex(None),
                                elements: [
                                    Literal(
                                        InterpolatedStringLiteralElement {
                                            range: 2..5,
                                            node_index: NodeIndex(None),
                                            value: "aaa",
                                        },
                                    ),
                                    Interpolation(
                                        InterpolatedElement {
                                            range: 5..10,
                                            node_index: NodeIndex(None),
                                            expression: Name(
                                                ExprName {
                                                    node_index: NodeIndex(None),
                                                    range: 6..9,
                                                    id: Name("bbb"),
                                                    ctx: Load,
                                                },
                                            ),
                                            debug_text: None,
                                            conversion: None,
                                            format_spec: None,
                                        },
                                    ),
                                    Literal(
                                        InterpolatedStringLiteralElement {
                                            range: 10..13,
                                            node_index: NodeIndex(None),
                                            value: "ccc",
                                        },
                                    ),
                                    Interpolation(
                                        InterpolatedElement {
                                            range: 13..18,
                                            node_index: NodeIndex(None),
                                            expression: Name(
                                                ExprName {
                                                    node_index: NodeIndex(None),
                                                    range: 14..17,
                                                    id: Name("ddd"),
                                                    ctx: Load,
                                                },
                                            ),
                                            debug_text: None,
                                            conversion: None,
                                            format_spec: None,
                                        },
                                    ),
                                    Literal(
                                        InterpolatedStringLiteralElement {
                                            range: 18..21,
                                            node_index: NodeIndex(None),
                                            value: "eee",
                                        },
                                    ),
                                ],
                                flags: FStringFlags {
                                    quote_style: Double,
                                    prefix: Regular,
                                    triple_quoted: false,
                                    unclosed: false,
                                },
                            },
                        ),
                    },
                },
            ),
        },
    ),
]
